Bug 213438 - [typo] Fix typo in nandfs_vnops.c
Summary: [typo] Fix typo in nandfs_vnops.c
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: freebsd-fs (Nobody)
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2016-10-13 09:07 UTC by Ganael LAPLANCHE
Modified: 2016-10-13 19:35 UTC (History)
3 users (show)

See Also:


Attachments
Fix ufs instead of nandfs (518 bytes, text/plain)
2016-10-13 09:07 UTC, Ganael LAPLANCHE
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ganael LAPLANCHE 2016-10-13 09:07:14 UTC
Created attachment 175690 [details]
Fix ufs instead of nandfs

Hi,

A panic message incorrectly evokes ufs instead of nandfs in nandfs_vnops.c. Find attached a patch that fixes that mistake.

Regards,
Ganael.
Comment 1 Konstantin Belousov freebsd_committer freebsd_triage 2016-10-13 13:13:34 UTC
(In reply to Ganael LAPLANCHE from comment #0)
You have a commit bit.  Please commit the patch yourself, adding 'Approved by: kib' to the commit tags.
Comment 2 Warner Losh freebsd_committer freebsd_triage 2016-10-13 17:08:37 UTC
What kib said :)
Comment 3 commit-hook freebsd_committer freebsd_triage 2016-10-13 19:33:54 UTC
A commit references this bug:

Author: martymac
Date: Thu Oct 13 19:33:08 UTC 2016
New revision: 307232
URL: https://svnweb.freebsd.org/changeset/base/307232

Log:
  Fix panic() message reporting ufs instead of nandfs

  PR:		213438
  Approved by:	kib

Changes:
  head/sys/fs/nandfs/nandfs_vnops.c
Comment 4 Ganael LAPLANCHE freebsd_committer freebsd_triage 2016-10-13 19:35:13 UTC
Committed, thanks to both of you :)