Fix panic() message reporting ufs instead of nandfs

PR:		213438
Approved by:	kib